--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="styles/style.css" /> -->
   </head>
   <body>
+  <div id="app"></div>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 <!--     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
