--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <title>Explorabilities</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Lato" rel="stylesheet">
   </head>
   <body>
-    <div id="app">
+    <div id="app" class="container">
     </div>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
