Add google api key

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app" class="container">
     </div>
+    <script type="text/javascript" src="config/keys.js" charset="utf-8"></script>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
