--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Explorabilities</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   </head>
   <body>
     <div id="app" class="container">
