Map responds to clicks on places

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   </head>
   <body>
-    <div id="app" class="container">
-    </div>
+    <div id="app" class="container"></div>
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
